--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ html{
     background-color: F4F9F9;
     display: flex;
     align-items: center;
-   
+    
 }
 
 .list{
@@ -27,12 +27,12 @@ html{
 }
 
 .list li{
-    padding: 10px 20px;
+    padding: 10px 15px;
     list-style: none;
     font-family: 'Roboto', sans-serif;
     
     
-}
+} 
  
 .list li a{
     font-size: 1.3rem;
@@ -78,7 +78,7 @@ html{
     margin: 1.5rem ;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(360px,1fr));
-    grid-gap: 0.7rem ;;
+    grid-gap: 0.7rem ;
 }
 
 .gallery-item{
@@ -151,6 +151,18 @@ footer{
         grid-template-columns: repeat(auto-fit,minmax(270px,1fr));
     }
 
+    .bg p{
+        
+        font-size: 2.8rem;
+        
+    }
+    
+    .bg p:hover{
+        color: #A4EBF3;
+        font-size: 3rem;
+        
+    }
+
 }
 
 @media only screen and (max-width:310px){
@@ -158,6 +170,21 @@ footer{
         grid-template-columns: repeat(auto-fit,minmax(255px,1fr));
     }
 
+}
+
+@media only screen and (max-width:800px){
+
+    .bg p{
+        
+        font-size: 3.8rem;
+        
+    }
+    
+    .bg p:hover{
+        color: #A4EBF3;
+        font-size: 4rem;
+        
+    }
 }
 
 
